// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VApp.js should allow a custom id 1`] = `

<div data-app="true"
     class="application theme--light"
     id="inspire"
>
  <div class="application--wrap">
  </div>
</div>

`;

exports[`VApp.js should generate theme using css variables 1`] = `
<style
  id="vuetify-theme-stylesheet"
  type="text/css"
>
  :root {
  --v-primary-base: #000000;
  --v-primary-lighten5: #777777;
  --v-primary-lighten4: #5e5e5e;
  --v-primary-lighten3: #474747;
  --v-primary-lighten2: #303030;
  --v-primary-lighten1: #1b1b1b;
  --v-primary-darken1: #000000;
  --v-primary-darken2: #000000;
  --v-primary-darken3: #000000;
  --v-primary-darken4: #000000;
  --v-secondary-base: #424242;
  --v-secondary-lighten5: #c1c1c1;
  --v-secondary-lighten4: #a6a6a6;
  --v-secondary-lighten3: #8b8b8b;
  --v-secondary-lighten2: #727272;
  --v-secondary-lighten1: #595959;
  --v-secondary-darken1: #2c2c2c;
  --v-secondary-darken2: #171717;
  --v-secondary-darken3: #000000;
  --v-secondary-darken4: #000000;
  --v-accent-base: #82b1ff;
  --v-accent-lighten5: #ffffff;
  --v-accent-lighten4: #f8ffff;
  --v-accent-lighten3: #daffff;
  --v-accent-lighten2: #bce8ff;
  --v-accent-lighten1: #9fccff;
  --v-accent-darken1: #6596e2;
  --v-accent-darken2: #467dc6;
  --v-accent-darken3: #2364aa;
  --v-accent-darken4: #004c90;
  --v-error-base: #ff5252;
  --v-error-lighten5: #ffe4d5;
  --v-error-lighten4: #ffc6b9;
  --v-error-lighten3: #ffa99e;
  --v-error-lighten2: #ff8c84;
  --v-error-lighten1: #ff6f6a;
  --v-error-darken1: #df323b;
  --v-error-darken2: #bf0025;
  --v-error-darken3: #9f0010;
  --v-error-darken4: #800000;
  --v-info-base: #2196f3;
  --v-info-lighten5: #d4ffff;
  --v-info-lighten4: #b5ffff;
  --v-info-lighten3: #95e8ff;
  --v-info-lighten2: #75ccff;
  --v-info-lighten1: #51b0ff;
  --v-info-darken1: #007cd6;
  --v-info-darken2: #0064ba;
  --v-info-darken3: #004d9f;
  --v-info-darken4: #003784;
  --v-success-base: #4caf50;
  --v-success-lighten5: #dcffd6;
  --v-success-lighten4: #beffba;
  --v-success-lighten3: #a2ff9e;
  --v-success-lighten2: #85e783;
  --v-success-lighten1: #69cb69;
  --v-success-darken1: #2d9437;
  --v-success-darken2: #00791e;
  --v-success-darken3: #006000;
  --v-success-darken4: #004700;
  --v-warning-base: #ffc107;
  --v-warning-lighten5: #ffffae;
  --v-warning-lighten4: #ffff91;
  --v-warning-lighten3: #ffff74;
  --v-warning-lighten2: #fff956;
  --v-warning-lighten1: #ffdd37;
  --v-warning-darken1: #e0a600;
  --v-warning-darken2: #c18c00;
  --v-warning-darken3: #a27300;
  --v-warning-darken4: #855a00;
}

a { color: var(--v-primary-base); }
.primary {
  background-color: var(--v-primary-base) !important;
  border-color: var(--v-primary-base) !important;
}
.primary--text {
  color: var(--v-primary-base) !important;
  caret-color: var(--v-primary-base) !important;
}
.primary.lighten-5 {
  background-color: var(--v-primary-lighten5) !important;
  border-color: var(--v-primary-lighten5) !important;
}
.primary--text.text--lighten-5 {
  color: var(--v-primary-lighten5) !important;
  caret-color: var(--v-primary-lighten5) !important;
}
.primary.lighten-4 {
  background-color: var(--v-primary-lighten4) !important;
  border-color: var(--v-primary-lighten4) !important;
}
.primary--text.text--lighten-4 {
  color: var(--v-primary-lighten4) !important;
  caret-color: var(--v-primary-lighten4) !important;
}
.primary.lighten-3 {
  background-color: var(--v-primary-lighten3) !important;
  border-color: var(--v-primary-lighten3) !important;
}
.primary--text.text--lighten-3 {
  color: var(--v-primary-lighten3) !important;
  caret-color: var(--v-primary-lighten3) !important;
}
.primary.lighten-2 {
  background-color: var(--v-primary-lighten2) !important;
  border-color: var(--v-primary-lighten2) !important;
}
.primary--text.text--lighten-2 {
  color: var(--v-primary-lighten2) !important;
  caret-color: var(--v-primary-lighten2) !important;
}
.primary.lighten-1 {
  background-color: var(--v-primary-lighten1) !important;
  border-color: var(--v-primary-lighten1) !important;
}
.primary--text.text--lighten-1 {
  color: var(--v-primary-lighten1) !important;
  caret-color: var(--v-primary-lighten1) !important;
}
.primary.darken-1 {
  background-color: var(--v-primary-darken1) !important;
  border-color: var(--v-primary-darken1) !important;
}
.primary--text.text--darken-1 {
  color: var(--v-primary-darken1) !important;
  caret-color: var(--v-primary-darken1) !important;
}
.primary.darken-2 {
  background-color: var(--v-primary-darken2) !important;
  border-color: var(--v-primary-darken2) !important;
}
.primary--text.text--darken-2 {
  color: var(--v-primary-darken2) !important;
  caret-color: var(--v-primary-darken2) !important;
}
.primary.darken-3 {
  background-color: var(--v-primary-darken3) !important;
  border-color: var(--v-primary-darken3) !important;
}
.primary--text.text--darken-3 {
  color: var(--v-primary-darken3) !important;
  caret-color: var(--v-primary-darken3) !important;
}
.primary.darken-4 {
  background-color: var(--v-primary-darken4) !important;
  border-color: var(--v-primary-darken4) !important;
}
.primary--text.text--darken-4 {
  color: var(--v-primary-darken4) !important;
  caret-color: var(--v-primary-darken4) !important;
}
.secondary {
  background-color: var(--v-secondary-base) !important;
  border-color: var(--v-secondary-base) !important;
}
.secondary--text {
  color: var(--v-secondary-base) !important;
  caret-color: var(--v-secondary-base) !important;
}
.secondary.lighten-5 {
  background-color: var(--v-secondary-lighten5) !important;
  border-color: var(--v-secondary-lighten5) !important;
}
.secondary--text.text--lighten-5 {
  color: var(--v-secondary-lighten5) !important;
  caret-color: var(--v-secondary-lighten5) !important;
}
.secondary.lighten-4 {
  background-color: var(--v-secondary-lighten4) !important;
  border-color: var(--v-secondary-lighten4) !important;
}
.secondary--text.text--lighten-4 {
  color: var(--v-secondary-lighten4) !important;
  caret-color: var(--v-secondary-lighten4) !important;
}
.secondary.lighten-3 {
  background-color: var(--v-secondary-lighten3) !important;
  border-color: var(--v-secondary-lighten3) !important;
}
.secondary--text.text--lighten-3 {
  color: var(--v-secondary-lighten3) !important;
  caret-color: var(--v-secondary-lighten3) !important;
}
.secondary.lighten-2 {
  background-color: var(--v-secondary-lighten2) !important;
  border-color: var(--v-secondary-lighten2) !important;
}
.secondary--text.text--lighten-2 {
  color: var(--v-secondary-lighten2) !important;
  caret-color: var(--v-secondary-lighten2) !important;
}
.secondary.lighten-1 {
  background-color: var(--v-secondary-lighten1) !important;
  border-color: var(--v-secondary-lighten1) !important;
}
.secondary--text.text--lighten-1 {
  color: var(--v-secondary-lighten1) !important;
  caret-color: var(--v-secondary-lighten1) !important;
}
.secondary.darken-1 {
  background-color: var(--v-secondary-darken1) !important;
  border-color: var(--v-secondary-darken1) !important;
}
.secondary--text.text--darken-1 {
  color: var(--v-secondary-darken1) !important;
  caret-color: var(--v-secondary-darken1) !important;
}
.secondary.darken-2 {
  background-color: var(--v-secondary-darken2) !important;
  border-color: var(--v-secondary-darken2) !important;
}
.secondary--text.text--darken-2 {
  color: var(--v-secondary-darken2) !important;
  caret-color: var(--v-secondary-darken2) !important;
}
.secondary.darken-3 {
  background-color: var(--v-secondary-darken3) !important;
  border-color: var(--v-secondary-darken3) !important;
}
.secondary--text.text--darken-3 {
  color: var(--v-secondary-darken3) !important;
  caret-color: var(--v-secondary-darken3) !important;
}
.secondary.darken-4 {
  background-color: var(--v-secondary-darken4) !important;
  border-color: var(--v-secondary-darken4) !important;
}
.secondary--text.text--darken-4 {
  color: var(--v-secondary-darken4) !important;
  caret-color: var(--v-secondary-darken4) !important;
}
.accent {
  background-color: var(--v-accent-base) !important;
  border-color: var(--v-accent-base) !important;
}
.accent--text {
  color: var(--v-accent-base) !important;
  caret-color: var(--v-accent-base) !important;
}
.accent.lighten-5 {
  background-color: var(--v-accent-lighten5) !important;
  border-color: var(--v-accent-lighten5) !important;
}
.accent--text.text--lighten-5 {
  color: var(--v-accent-lighten5) !important;
  caret-color: var(--v-accent-lighten5) !important;
}
.accent.lighten-4 {
  background-color: var(--v-accent-lighten4) !important;
  border-color: var(--v-accent-lighten4) !important;
}
.accent--text.text--lighten-4 {
  color: var(--v-accent-lighten4) !important;
  caret-color: var(--v-accent-lighten4) !important;
}
.accent.lighten-3 {
  background-color: var(--v-accent-lighten3) !important;
  border-color: var(--v-accent-lighten3) !important;
}
.accent--text.text--lighten-3 {
  color: var(--v-accent-lighten3) !important;
  caret-color: var(--v-accent-lighten3) !important;
}
.accent.lighten-2 {
  background-color: var(--v-accent-lighten2) !important;
  border-color: var(--v-accent-lighten2) !important;
}
.accent--text.text--lighten-2 {
  color: var(--v-accent-lighten2) !important;
  caret-color: var(--v-accent-lighten2) !important;
}
.accent.lighten-1 {
  background-color: var(--v-accent-lighten1) !important;
  border-color: var(--v-accent-lighten1) !important;
}
.accent--text.text--lighten-1 {
  color: var(--v-accent-lighten1) !important;
  caret-color: var(--v-accent-lighten1) !important;
}
.accent.darken-1 {
  background-color: var(--v-accent-darken1) !important;
  border-color: var(--v-accent-darken1) !important;
}
.accent--text.text--darken-1 {
  color: var(--v-accent-darken1) !important;
  caret-color: var(--v-accent-darken1) !important;
}
.accent.darken-2 {
  background-color: var(--v-accent-darken2) !important;
  border-color: var(--v-accent-darken2) !important;
}
.accent--text.text--darken-2 {
  color: var(--v-accent-darken2) !important;
  caret-color: var(--v-accent-darken2) !important;
}
.accent.darken-3 {
  background-color: var(--v-accent-darken3) !important;
  border-color: var(--v-accent-darken3) !important;
}
.accent--text.text--darken-3 {
  color: var(--v-accent-darken3) !important;
  caret-color: var(--v-accent-darken3) !important;
}
.accent.darken-4 {
  background-color: var(--v-accent-darken4) !important;
  border-color: var(--v-accent-darken4) !important;
}
.accent--text.text--darken-4 {
  color: var(--v-accent-darken4) !important;
  caret-color: var(--v-accent-darken4) !important;
}
.error {
  background-color: var(--v-error-base) !important;
  border-color: var(--v-error-base) !important;
}
.error--text {
  color: var(--v-error-base) !important;
  caret-color: var(--v-error-base) !important;
}
.error.lighten-5 {
  background-color: var(--v-error-lighten5) !important;
  border-color: var(--v-error-lighten5) !important;
}
.error--text.text--lighten-5 {
  color: var(--v-error-lighten5) !important;
  caret-color: var(--v-error-lighten5) !important;
}
.error.lighten-4 {
  background-color: var(--v-error-lighten4) !important;
  border-color: var(--v-error-lighten4) !important;
}
.error--text.text--lighten-4 {
  color: var(--v-error-lighten4) !important;
  caret-color: var(--v-error-lighten4) !important;
}
.error.lighten-3 {
  background-color: var(--v-error-lighten3) !important;
  border-color: var(--v-error-lighten3) !important;
}
.error--text.text--lighten-3 {
  color: var(--v-error-lighten3) !important;
  caret-color: var(--v-error-lighten3) !important;
}
.error.lighten-2 {
  background-color: var(--v-error-lighten2) !important;
  border-color: var(--v-error-lighten2) !important;
}
.error--text.text--lighten-2 {
  color: var(--v-error-lighten2) !important;
  caret-color: var(--v-error-lighten2) !important;
}
.error.lighten-1 {
  background-color: var(--v-error-lighten1) !important;
  border-color: var(--v-error-lighten1) !important;
}
.error--text.text--lighten-1 {
  color: var(--v-error-lighten1) !important;
  caret-color: var(--v-error-lighten1) !important;
}
.error.darken-1 {
  background-color: var(--v-error-darken1) !important;
  border-color: var(--v-error-darken1) !important;
}
.error--text.text--darken-1 {
  color: var(--v-error-darken1) !important;
  caret-color: var(--v-error-darken1) !important;
}
.error.darken-2 {
  background-color: var(--v-error-darken2) !important;
  border-color: var(--v-error-darken2) !important;
}
.error--text.text--darken-2 {
  color: var(--v-error-darken2) !important;
  caret-color: var(--v-error-darken2) !important;
}
.error.darken-3 {
  background-color: var(--v-error-darken3) !important;
  border-color: var(--v-error-darken3) !important;
}
.error--text.text--darken-3 {
  color: var(--v-error-darken3) !important;
  caret-color: var(--v-error-darken3) !important;
}
.error.darken-4 {
  background-color: var(--v-error-darken4) !important;
  border-color: var(--v-error-darken4) !important;
}
.error--text.text--darken-4 {
  color: var(--v-error-darken4) !important;
  caret-color: var(--v-error-darken4) !important;
}
.info {
  background-color: var(--v-info-base) !important;
  border-color: var(--v-info-base) !important;
}
.info--text {
  color: var(--v-info-base) !important;
  caret-color: var(--v-info-base) !important;
}
.info.lighten-5 {
  background-color: var(--v-info-lighten5) !important;
  border-color: var(--v-info-lighten5) !important;
}
.info--text.text--lighten-5 {
  color: var(--v-info-lighten5) !important;
  caret-color: var(--v-info-lighten5) !important;
}
.info.lighten-4 {
  background-color: var(--v-info-lighten4) !important;
  border-color: var(--v-info-lighten4) !important;
}
.info--text.text--lighten-4 {
  color: var(--v-info-lighten4) !important;
  caret-color: var(--v-info-lighten4) !important;
}
.info.lighten-3 {
  background-color: var(--v-info-lighten3) !important;
  border-color: var(--v-info-lighten3) !important;
}
.info--text.text--lighten-3 {
  color: var(--v-info-lighten3) !important;
  caret-color: var(--v-info-lighten3) !important;
}
.info.lighten-2 {
  background-color: var(--v-info-lighten2) !important;
  border-color: var(--v-info-lighten2) !important;
}
.info--text.text--lighten-2 {
  color: var(--v-info-lighten2) !important;
  caret-color: var(--v-info-lighten2) !important;
}
.info.lighten-1 {
  background-color: var(--v-info-lighten1) !important;
  border-color: var(--v-info-lighten1) !important;
}
.info--text.text--lighten-1 {
  color: var(--v-info-lighten1) !important;
  caret-color: var(--v-info-lighten1) !important;
}
.info.darken-1 {
  background-color: var(--v-info-darken1) !important;
  border-color: var(--v-info-darken1) !important;
}
.info--text.text--darken-1 {
  color: var(--v-info-darken1) !important;
  caret-color: var(--v-info-darken1) !important;
}
.info.darken-2 {
  background-color: var(--v-info-darken2) !important;
  border-color: var(--v-info-darken2) !important;
}
.info--text.text--darken-2 {
  color: var(--v-info-darken2) !important;
  caret-color: var(--v-info-darken2) !important;
}
.info.darken-3 {
  background-color: var(--v-info-darken3) !important;
  border-color: var(--v-info-darken3) !important;
}
.info--text.text--darken-3 {
  color: var(--v-info-darken3) !important;
  caret-color: var(--v-info-darken3) !important;
}
.info.darken-4 {
  background-color: var(--v-info-darken4) !important;
  border-color: var(--v-info-darken4) !important;
}
.info--text.text--darken-4 {
  color: var(--v-info-darken4) !important;
  caret-color: var(--v-info-darken4) !important;
}
.success {
  background-color: var(--v-success-base) !important;
  border-color: var(--v-success-base) !important;
}
.success--text {
  color: var(--v-success-base) !important;
  caret-color: var(--v-success-base) !important;
}
.success.lighten-5 {
  background-color: var(--v-success-lighten5) !important;
  border-color: var(--v-success-lighten5) !important;
}
.success--text.text--lighten-5 {
  color: var(--v-success-lighten5) !important;
  caret-color: var(--v-success-lighten5) !important;
}
.success.lighten-4 {
  background-color: var(--v-success-lighten4) !important;
  border-color: var(--v-success-lighten4) !important;
}
.success--text.text--lighten-4 {
  color: var(--v-success-lighten4) !important;
  caret-color: var(--v-success-lighten4) !important;
}
.success.lighten-3 {
  background-color: var(--v-success-lighten3) !important;
  border-color: var(--v-success-lighten3) !important;
}
.success--text.text--lighten-3 {
  color: var(--v-success-lighten3) !important;
  caret-color: var(--v-success-lighten3) !important;
}
.success.lighten-2 {
  background-color: var(--v-success-lighten2) !important;
  border-color: var(--v-success-lighten2) !important;
}
.success--text.text--lighten-2 {
  color: var(--v-success-lighten2) !important;
  caret-color: var(--v-success-lighten2) !important;
}
.success.lighten-1 {
  background-color: var(--v-success-lighten1) !important;
  border-color: var(--v-success-lighten1) !important;
}
.success--text.text--lighten-1 {
  color: var(--v-success-lighten1) !important;
  caret-color: var(--v-success-lighten1) !important;
}
.success.darken-1 {
  background-color: var(--v-success-darken1) !important;
  border-color: var(--v-success-darken1) !important;
}
.success--text.text--darken-1 {
  color: var(--v-success-darken1) !important;
  caret-color: var(--v-success-darken1) !important;
}
.success.darken-2 {
  background-color: var(--v-success-darken2) !important;
  border-color: var(--v-success-darken2) !important;
}
.success--text.text--darken-2 {
  color: var(--v-success-darken2) !important;
  caret-color: var(--v-success-darken2) !important;
}
.success.darken-3 {
  background-color: var(--v-success-darken3) !important;
  border-color: var(--v-success-darken3) !important;
}
.success--text.text--darken-3 {
  color: var(--v-success-darken3) !important;
  caret-color: var(--v-success-darken3) !important;
}
.success.darken-4 {
  background-color: var(--v-success-darken4) !important;
  border-color: var(--v-success-darken4) !important;
}
.success--text.text--darken-4 {
  color: var(--v-success-darken4) !important;
  caret-color: var(--v-success-darken4) !important;
}
.warning {
  background-color: var(--v-warning-base) !important;
  border-color: var(--v-warning-base) !important;
}
.warning--text {
  color: var(--v-warning-base) !important;
  caret-color: var(--v-warning-base) !important;
}
.warning.lighten-5 {
  background-color: var(--v-warning-lighten5) !important;
  border-color: var(--v-warning-lighten5) !important;
}
.warning--text.text--lighten-5 {
  color: var(--v-warning-lighten5) !important;
  caret-color: var(--v-warning-lighten5) !important;
}
.warning.lighten-4 {
  background-color: var(--v-warning-lighten4) !important;
  border-color: var(--v-warning-lighten4) !important;
}
.warning--text.text--lighten-4 {
  color: var(--v-warning-lighten4) !important;
  caret-color: var(--v-warning-lighten4) !important;
}
.warning.lighten-3 {
  background-color: var(--v-warning-lighten3) !important;
  border-color: var(--v-warning-lighten3) !important;
}
.warning--text.text--lighten-3 {
  color: var(--v-warning-lighten3) !important;
  caret-color: var(--v-warning-lighten3) !important;
}
.warning.lighten-2 {
  background-color: var(--v-warning-lighten2) !important;
  border-color: var(--v-warning-lighten2) !important;
}
.warning--text.text--lighten-2 {
  color: var(--v-warning-lighten2) !important;
  caret-color: var(--v-warning-lighten2) !important;
}
.warning.lighten-1 {
  background-color: var(--v-warning-lighten1) !important;
  border-color: var(--v-warning-lighten1) !important;
}
.warning--text.text--lighten-1 {
  color: var(--v-warning-lighten1) !important;
  caret-color: var(--v-warning-lighten1) !important;
}
.warning.darken-1 {
  background-color: var(--v-warning-darken1) !important;
  border-color: var(--v-warning-darken1) !important;
}
.warning--text.text--darken-1 {
  color: var(--v-warning-darken1) !important;
  caret-color: var(--v-warning-darken1) !important;
}
.warning.darken-2 {
  background-color: var(--v-warning-darken2) !important;
  border-color: var(--v-warning-darken2) !important;
}
.warning--text.text--darken-2 {
  color: var(--v-warning-darken2) !important;
  caret-color: var(--v-warning-darken2) !important;
}
.warning.darken-3 {
  background-color: var(--v-warning-darken3) !important;
  border-color: var(--v-warning-darken3) !important;
}
.warning--text.text--darken-3 {
  color: var(--v-warning-darken3) !important;
  caret-color: var(--v-warning-darken3) !important;
}
.warning.darken-4 {
  background-color: var(--v-warning-darken4) !important;
  border-color: var(--v-warning-darken4) !important;
}
.warning--text.text--darken-4 {
  color: var(--v-warning-darken4) !important;
  caret-color: var(--v-warning-darken4) !important;
}
</style>
`;

exports[`VApp.js should match a snapshot 1`] = `

<div data-app="true"
     class="application theme--light"
     id="app"
>
  <div class="application--wrap">
  </div>
</div>

`;

exports[`VApp.js should watch theme 1`] = `
<style
  id="vuetify-theme-stylesheet"
  type="text/css"
>
  a { color: #1976d2; }
.primary {
  background-color: #1976d2 !important;
  border-color: #1976d2 !important;
}
.primary--text {
  color: #1976d2 !important;
  caret-color: #1976d2 !important;
}
.primary.lighten-5 {
  background-color: #c7fdff !important;
  border-color: #c7fdff !important;
}
.primary--text.text--lighten-5 {
  color: #c7fdff !important;
  caret-color: #c7fdff !important;
}
.primary.lighten-4 {
  background-color: #a8e0ff !important;
  border-color: #a8e0ff !important;
}
.primary--text.text--lighten-4 {
  color: #a8e0ff !important;
  caret-color: #a8e0ff !important;
}
.primary.lighten-3 {
  background-color: #8ac5ff !important;
  border-color: #8ac5ff !important;
}
.primary--text.text--lighten-3 {
  color: #8ac5ff !important;
  caret-color: #8ac5ff !important;
}
.primary.lighten-2 {
  background-color: #6aaaff !important;
  border-color: #6aaaff !important;
}
.primary--text.text--lighten-2 {
  color: #6aaaff !important;
  caret-color: #6aaaff !important;
}
.primary.lighten-1 {
  background-color: #488fef !important;
  border-color: #488fef !important;
}
.primary--text.text--lighten-1 {
  color: #488fef !important;
  caret-color: #488fef !important;
}
.primary.darken-1 {
  background-color: #005eb6 !important;
  border-color: #005eb6 !important;
}
.primary--text.text--darken-1 {
  color: #005eb6 !important;
  caret-color: #005eb6 !important;
}
.primary.darken-2 {
  background-color: #00479b !important;
  border-color: #00479b !important;
}
.primary--text.text--darken-2 {
  color: #00479b !important;
  caret-color: #00479b !important;
}
.primary.darken-3 {
  background-color: #003180 !important;
  border-color: #003180 !important;
}
.primary--text.text--darken-3 {
  color: #003180 !important;
  caret-color: #003180 !important;
}
.primary.darken-4 {
  background-color: #001e67 !important;
  border-color: #001e67 !important;
}
.primary--text.text--darken-4 {
  color: #001e67 !important;
  caret-color: #001e67 !important;
}
.secondary {
  background-color: #424242 !important;
  border-color: #424242 !important;
}
.secondary--text {
  color: #424242 !important;
  caret-color: #424242 !important;
}
.secondary.lighten-5 {
  background-color: #c1c1c1 !important;
  border-color: #c1c1c1 !important;
}
.secondary--text.text--lighten-5 {
  color: #c1c1c1 !important;
  caret-color: #c1c1c1 !important;
}
.secondary.lighten-4 {
  background-color: #a6a6a6 !important;
  border-color: #a6a6a6 !important;
}
.secondary--text.text--lighten-4 {
  color: #a6a6a6 !important;
  caret-color: #a6a6a6 !important;
}
.secondary.lighten-3 {
  background-color: #8b8b8b !important;
  border-color: #8b8b8b !important;
}
.secondary--text.text--lighten-3 {
  color: #8b8b8b !important;
  caret-color: #8b8b8b !important;
}
.secondary.lighten-2 {
  background-color: #727272 !important;
  border-color: #727272 !important;
}
.secondary--text.text--lighten-2 {
  color: #727272 !important;
  caret-color: #727272 !important;
}
.secondary.lighten-1 {
  background-color: #595959 !important;
  border-color: #595959 !important;
}
.secondary--text.text--lighten-1 {
  color: #595959 !important;
  caret-color: #595959 !important;
}
.secondary.darken-1 {
  background-color: #2c2c2c !important;
  border-color: #2c2c2c !important;
}
.secondary--text.text--darken-1 {
  color: #2c2c2c !important;
  caret-color: #2c2c2c !important;
}
.secondary.darken-2 {
  background-color: #171717 !important;
  border-color: #171717 !important;
}
.secondary--text.text--darken-2 {
  color: #171717 !important;
  caret-color: #171717 !important;
}
.secondary.darken-3 {
  background-color: #000000 !important;
  border-color: #000000 !important;
}
.secondary--text.text--darken-3 {
  color: #000000 !important;
  caret-color: #000000 !important;
}
.secondary.darken-4 {
  background-color: #000000 !important;
  border-color: #000000 !important;
}
.secondary--text.text--darken-4 {
  color: #000000 !important;
  caret-color: #000000 !important;
}
.accent {
  background-color: #82b1ff !important;
  border-color: #82b1ff !important;
}
.accent--text {
  color: #82b1ff !important;
  caret-color: #82b1ff !important;
}
.accent.lighten-5 {
  background-color: #ffffff !important;
  border-color: #ffffff !important;
}
.accent--text.text--lighten-5 {
  color: #ffffff !important;
  caret-color: #ffffff !important;
}
.accent.lighten-4 {
  background-color: #f8ffff !important;
  border-color: #f8ffff !important;
}
.accent--text.text--lighten-4 {
  color: #f8ffff !important;
  caret-color: #f8ffff !important;
}
.accent.lighten-3 {
  background-color: #daffff !important;
  border-color: #daffff !important;
}
.accent--text.text--lighten-3 {
  color: #daffff !important;
  caret-color: #daffff !important;
}
.accent.lighten-2 {
  background-color: #bce8ff !important;
  border-color: #bce8ff !important;
}
.accent--text.text--lighten-2 {
  color: #bce8ff !important;
  caret-color: #bce8ff !important;
}
.accent.lighten-1 {
  background-color: #9fccff !important;
  border-color: #9fccff !important;
}
.accent--text.text--lighten-1 {
  color: #9fccff !important;
  caret-color: #9fccff !important;
}
.accent.darken-1 {
  background-color: #6596e2 !important;
  border-color: #6596e2 !important;
}
.accent--text.text--darken-1 {
  color: #6596e2 !important;
  caret-color: #6596e2 !important;
}
.accent.darken-2 {
  background-color: #467dc6 !important;
  border-color: #467dc6 !important;
}
.accent--text.text--darken-2 {
  color: #467dc6 !important;
  caret-color: #467dc6 !important;
}
.accent.darken-3 {
  background-color: #2364aa !important;
  border-color: #2364aa !important;
}
.accent--text.text--darken-3 {
  color: #2364aa !important;
  caret-color: #2364aa !important;
}
.accent.darken-4 {
  background-color: #004c90 !important;
  border-color: #004c90 !important;
}
.accent--text.text--darken-4 {
  color: #004c90 !important;
  caret-color: #004c90 !important;
}
.error {
  background-color: #ff5252 !important;
  border-color: #ff5252 !important;
}
.error--text {
  color: #ff5252 !important;
  caret-color: #ff5252 !important;
}
.error.lighten-5 {
  background-color: #ffe4d5 !important;
  border-color: #ffe4d5 !important;
}
.error--text.text--lighten-5 {
  color: #ffe4d5 !important;
  caret-color: #ffe4d5 !important;
}
.error.lighten-4 {
  background-color: #ffc6b9 !important;
  border-color: #ffc6b9 !important;
}
.error--text.text--lighten-4 {
  color: #ffc6b9 !important;
  caret-color: #ffc6b9 !important;
}
.error.lighten-3 {
  background-color: #ffa99e !important;
  border-color: #ffa99e !important;
}
.error--text.text--lighten-3 {
  color: #ffa99e !important;
  caret-color: #ffa99e !important;
}
.error.lighten-2 {
  background-color: #ff8c84 !important;
  border-color: #ff8c84 !important;
}
.error--text.text--lighten-2 {
  color: #ff8c84 !important;
  caret-color: #ff8c84 !important;
}
.error.lighten-1 {
  background-color: #ff6f6a !important;
  border-color: #ff6f6a !important;
}
.error--text.text--lighten-1 {
  color: #ff6f6a !important;
  caret-color: #ff6f6a !important;
}
.error.darken-1 {
  background-color: #df323b !important;
  border-color: #df323b !important;
}
.error--text.text--darken-1 {
  color: #df323b !important;
  caret-color: #df323b !important;
}
.error.darken-2 {
  background-color: #bf0025 !important;
  border-color: #bf0025 !important;
}
.error--text.text--darken-2 {
  color: #bf0025 !important;
  caret-color: #bf0025 !important;
}
.error.darken-3 {
  background-color: #9f0010 !important;
  border-color: #9f0010 !important;
}
.error--text.text--darken-3 {
  color: #9f0010 !important;
  caret-color: #9f0010 !important;
}
.error.darken-4 {
  background-color: #800000 !important;
  border-color: #800000 !important;
}
.error--text.text--darken-4 {
  color: #800000 !important;
  caret-color: #800000 !important;
}
.info {
  background-color: #2196f3 !important;
  border-color: #2196f3 !important;
}
.info--text {
  color: #2196f3 !important;
  caret-color: #2196f3 !important;
}
.info.lighten-5 {
  background-color: #d4ffff !important;
  border-color: #d4ffff !important;
}
.info--text.text--lighten-5 {
  color: #d4ffff !important;
  caret-color: #d4ffff !important;
}
.info.lighten-4 {
  background-color: #b5ffff !important;
  border-color: #b5ffff !important;
}
.info--text.text--lighten-4 {
  color: #b5ffff !important;
  caret-color: #b5ffff !important;
}
.info.lighten-3 {
  background-color: #95e8ff !important;
  border-color: #95e8ff !important;
}
.info--text.text--lighten-3 {
  color: #95e8ff !important;
  caret-color: #95e8ff !important;
}
.info.lighten-2 {
  background-color: #75ccff !important;
  border-color: #75ccff !important;
}
.info--text.text--lighten-2 {
  color: #75ccff !important;
  caret-color: #75ccff !important;
}
.info.lighten-1 {
  background-color: #51b0ff !important;
  border-color: #51b0ff !important;
}
.info--text.text--lighten-1 {
  color: #51b0ff !important;
  caret-color: #51b0ff !important;
}
.info.darken-1 {
  background-color: #007cd6 !important;
  border-color: #007cd6 !important;
}
.info--text.text--darken-1 {
  color: #007cd6 !important;
  caret-color: #007cd6 !important;
}
.info.darken-2 {
  background-color: #0064ba !important;
  border-color: #0064ba !important;
}
.info--text.text--darken-2 {
  color: #0064ba !important;
  caret-color: #0064ba !important;
}
.info.darken-3 {
  background-color: #004d9f !important;
  border-color: #004d9f !important;
}
.info--text.text--darken-3 {
  color: #004d9f !important;
  caret-color: #004d9f !important;
}
.info.darken-4 {
  background-color: #003784 !important;
  border-color: #003784 !important;
}
.info--text.text--darken-4 {
  color: #003784 !important;
  caret-color: #003784 !important;
}
.success {
  background-color: #4caf50 !important;
  border-color: #4caf50 !important;
}
.success--text {
  color: #4caf50 !important;
  caret-color: #4caf50 !important;
}
.success.lighten-5 {
  background-color: #dcffd6 !important;
  border-color: #dcffd6 !important;
}
.success--text.text--lighten-5 {
  color: #dcffd6 !important;
  caret-color: #dcffd6 !important;
}
.success.lighten-4 {
  background-color: #beffba !important;
  border-color: #beffba !important;
}
.success--text.text--lighten-4 {
  color: #beffba !important;
  caret-color: #beffba !important;
}
.success.lighten-3 {
  background-color: #a2ff9e !important;
  border-color: #a2ff9e !important;
}
.success--text.text--lighten-3 {
  color: #a2ff9e !important;
  caret-color: #a2ff9e !important;
}
.success.lighten-2 {
  background-color: #85e783 !important;
  border-color: #85e783 !important;
}
.success--text.text--lighten-2 {
  color: #85e783 !important;
  caret-color: #85e783 !important;
}
.success.lighten-1 {
  background-color: #69cb69 !important;
  border-color: #69cb69 !important;
}
.success--text.text--lighten-1 {
  color: #69cb69 !important;
  caret-color: #69cb69 !important;
}
.success.darken-1 {
  background-color: #2d9437 !important;
  border-color: #2d9437 !important;
}
.success--text.text--darken-1 {
  color: #2d9437 !important;
  caret-color: #2d9437 !important;
}
.success.darken-2 {
  background-color: #00791e !important;
  border-color: #00791e !important;
}
.success--text.text--darken-2 {
  color: #00791e !important;
  caret-color: #00791e !important;
}
.success.darken-3 {
  background-color: #006000 !important;
  border-color: #006000 !important;
}
.success--text.text--darken-3 {
  color: #006000 !important;
  caret-color: #006000 !important;
}
.success.darken-4 {
  background-color: #004700 !important;
  border-color: #004700 !important;
}
.success--text.text--darken-4 {
  color: #004700 !important;
  caret-color: #004700 !important;
}
.warning {
  background-color: #ffc107 !important;
  border-color: #ffc107 !important;
}
.warning--text {
  color: #ffc107 !important;
  caret-color: #ffc107 !important;
}
.warning.lighten-5 {
  background-color: #ffffae !important;
  border-color: #ffffae !important;
}
.warning--text.text--lighten-5 {
  color: #ffffae !important;
  caret-color: #ffffae !important;
}
.warning.lighten-4 {
  background-color: #ffff91 !important;
  border-color: #ffff91 !important;
}
.warning--text.text--lighten-4 {
  color: #ffff91 !important;
  caret-color: #ffff91 !important;
}
.warning.lighten-3 {
  background-color: #ffff74 !important;
  border-color: #ffff74 !important;
}
.warning--text.text--lighten-3 {
  color: #ffff74 !important;
  caret-color: #ffff74 !important;
}
.warning.lighten-2 {
  background-color: #fff956 !important;
  border-color: #fff956 !important;
}
.warning--text.text--lighten-2 {
  color: #fff956 !important;
  caret-color: #fff956 !important;
}
.warning.lighten-1 {
  background-color: #ffdd37 !important;
  border-color: #ffdd37 !important;
}
.warning--text.text--lighten-1 {
  color: #ffdd37 !important;
  caret-color: #ffdd37 !important;
}
.warning.darken-1 {
  background-color: #e0a600 !important;
  border-color: #e0a600 !important;
}
.warning--text.text--darken-1 {
  color: #e0a600 !important;
  caret-color: #e0a600 !important;
}
.warning.darken-2 {
  background-color: #c18c00 !important;
  border-color: #c18c00 !important;
}
.warning--text.text--darken-2 {
  color: #c18c00 !important;
  caret-color: #c18c00 !important;
}
.warning.darken-3 {
  background-color: #a27300 !important;
  border-color: #a27300 !important;
}
.warning--text.text--darken-3 {
  color: #a27300 !important;
  caret-color: #a27300 !important;
}
.warning.darken-4 {
  background-color: #855a00 !important;
  border-color: #855a00 !important;
}
.warning--text.text--darken-4 {
  color: #855a00 !important;
  caret-color: #855a00 !important;
}
</style>
`;

exports[`VApp.js should watch theme 2`] = `
<style
  id="vuetify-theme-stylesheet"
  type="text/css"
>
  a { color: #000000; }
.primary {
  background-color: #000000 !important;
  border-color: #000000 !important;
}
.primary--text {
  color: #000000 !important;
  caret-color: #000000 !important;
}
.primary.lighten-5 {
  background-color: #777777 !important;
  border-color: #777777 !important;
}
.primary--text.text--lighten-5 {
  color: #777777 !important;
  caret-color: #777777 !important;
}
.primary.lighten-4 {
  background-color: #5e5e5e !important;
  border-color: #5e5e5e !important;
}
.primary--text.text--lighten-4 {
  color: #5e5e5e !important;
  caret-color: #5e5e5e !important;
}
.primary.lighten-3 {
  background-color: #474747 !important;
  border-color: #474747 !important;
}
.primary--text.text--lighten-3 {
  color: #474747 !important;
  caret-color: #474747 !important;
}
.primary.lighten-2 {
  background-color: #303030 !important;
  border-color: #303030 !important;
}
.primary--text.text--lighten-2 {
  color: #303030 !important;
  caret-color: #303030 !important;
}
.primary.lighten-1 {
  background-color: #1b1b1b !important;
  border-color: #1b1b1b !important;
}
.primary--text.text--lighten-1 {
  color: #1b1b1b !important;
  caret-color: #1b1b1b !important;
}
.primary.darken-1 {
  background-color: #000000 !important;
  border-color: #000000 !important;
}
.primary--text.text--darken-1 {
  color: #000000 !important;
  caret-color: #000000 !important;
}
.primary.darken-2 {
  background-color: #000000 !important;
  border-color: #000000 !important;
}
.primary--text.text--darken-2 {
  color: #000000 !important;
  caret-color: #000000 !important;
}
.primary.darken-3 {
  background-color: #000000 !important;
  border-color: #000000 !important;
}
.primary--text.text--darken-3 {
  color: #000000 !important;
  caret-color: #000000 !important;
}
.primary.darken-4 {
  background-color: #000000 !important;
  border-color: #000000 !important;
}
.primary--text.text--darken-4 {
  color: #000000 !important;
  caret-color: #000000 !important;
}
.secondary {
  background-color: #424242 !important;
  border-color: #424242 !important;
}
.secondary--text {
  color: #424242 !important;
  caret-color: #424242 !important;
}
.secondary.lighten-5 {
  background-color: #c1c1c1 !important;
  border-color: #c1c1c1 !important;
}
.secondary--text.text--lighten-5 {
  color: #c1c1c1 !important;
  caret-color: #c1c1c1 !important;
}
.secondary.lighten-4 {
  background-color: #a6a6a6 !important;
  border-color: #a6a6a6 !important;
}
.secondary--text.text--lighten-4 {
  color: #a6a6a6 !important;
  caret-color: #a6a6a6 !important;
}
.secondary.lighten-3 {
  background-color: #8b8b8b !important;
  border-color: #8b8b8b !important;
}
.secondary--text.text--lighten-3 {
  color: #8b8b8b !important;
  caret-color: #8b8b8b !important;
}
.secondary.lighten-2 {
  background-color: #727272 !important;
  border-color: #727272 !important;
}
.secondary--text.text--lighten-2 {
  color: #727272 !important;
  caret-color: #727272 !important;
}
.secondary.lighten-1 {
  background-color: #595959 !important;
  border-color: #595959 !important;
}
.secondary--text.text--lighten-1 {
  color: #595959 !important;
  caret-color: #595959 !important;
}
.secondary.darken-1 {
  background-color: #2c2c2c !important;
  border-color: #2c2c2c !important;
}
.secondary--text.text--darken-1 {
  color: #2c2c2c !important;
  caret-color: #2c2c2c !important;
}
.secondary.darken-2 {
  background-color: #171717 !important;
  border-color: #171717 !important;
}
.secondary--text.text--darken-2 {
  color: #171717 !important;
  caret-color: #171717 !important;
}
.secondary.darken-3 {
  background-color: #000000 !important;
  border-color: #000000 !important;
}
.secondary--text.text--darken-3 {
  color: #000000 !important;
  caret-color: #000000 !important;
}
.secondary.darken-4 {
  background-color: #000000 !important;
  border-color: #000000 !important;
}
.secondary--text.text--darken-4 {
  color: #000000 !important;
  caret-color: #000000 !important;
}
.accent {
  background-color: #82b1ff !important;
  border-color: #82b1ff !important;
}
.accent--text {
  color: #82b1ff !important;
  caret-color: #82b1ff !important;
}
.accent.lighten-5 {
  background-color: #ffffff !important;
  border-color: #ffffff !important;
}
.accent--text.text--lighten-5 {
  color: #ffffff !important;
  caret-color: #ffffff !important;
}
.accent.lighten-4 {
  background-color: #f8ffff !important;
  border-color: #f8ffff !important;
}
.accent--text.text--lighten-4 {
  color: #f8ffff !important;
  caret-color: #f8ffff !important;
}
.accent.lighten-3 {
  background-color: #daffff !important;
  border-color: #daffff !important;
}
.accent--text.text--lighten-3 {
  color: #daffff !important;
  caret-color: #daffff !important;
}
.accent.lighten-2 {
  background-color: #bce8ff !important;
  border-color: #bce8ff !important;
}
.accent--text.text--lighten-2 {
  color: #bce8ff !important;
  caret-color: #bce8ff !important;
}
.accent.lighten-1 {
  background-color: #9fccff !important;
  border-color: #9fccff !important;
}
.accent--text.text--lighten-1 {
  color: #9fccff !important;
  caret-color: #9fccff !important;
}
.accent.darken-1 {
  background-color: #6596e2 !important;
  border-color: #6596e2 !important;
}
.accent--text.text--darken-1 {
  color: #6596e2 !important;
  caret-color: #6596e2 !important;
}
.accent.darken-2 {
  background-color: #467dc6 !important;
  border-color: #467dc6 !important;
}
.accent--text.text--darken-2 {
  color: #467dc6 !important;
  caret-color: #467dc6 !important;
}
.accent.darken-3 {
  background-color: #2364aa !important;
  border-color: #2364aa !important;
}
.accent--text.text--darken-3 {
  color: #2364aa !important;
  caret-color: #2364aa !important;
}
.accent.darken-4 {
  background-color: #004c90 !important;
  border-color: #004c90 !important;
}
.accent--text.text--darken-4 {
  color: #004c90 !important;
  caret-color: #004c90 !important;
}
.error {
  background-color: #ff5252 !important;
  border-color: #ff5252 !important;
}
.error--text {
  color: #ff5252 !important;
  caret-color: #ff5252 !important;
}
.error.lighten-5 {
  background-color: #ffe4d5 !important;
  border-color: #ffe4d5 !important;
}
.error--text.text--lighten-5 {
  color: #ffe4d5 !important;
  caret-color: #ffe4d5 !important;
}
.error.lighten-4 {
  background-color: #ffc6b9 !important;
  border-color: #ffc6b9 !important;
}
.error--text.text--lighten-4 {
  color: #ffc6b9 !important;
  caret-color: #ffc6b9 !important;
}
.error.lighten-3 {
  background-color: #ffa99e !important;
  border-color: #ffa99e !important;
}
.error--text.text--lighten-3 {
  color: #ffa99e !important;
  caret-color: #ffa99e !important;
}
.error.lighten-2 {
  background-color: #ff8c84 !important;
  border-color: #ff8c84 !important;
}
.error--text.text--lighten-2 {
  color: #ff8c84 !important;
  caret-color: #ff8c84 !important;
}
.error.lighten-1 {
  background-color: #ff6f6a !important;
  border-color: #ff6f6a !important;
}
.error--text.text--lighten-1 {
  color: #ff6f6a !important;
  caret-color: #ff6f6a !important;
}
.error.darken-1 {
  background-color: #df323b !important;
  border-color: #df323b !important;
}
.error--text.text--darken-1 {
  color: #df323b !important;
  caret-color: #df323b !important;
}
.error.darken-2 {
  background-color: #bf0025 !important;
  border-color: #bf0025 !important;
}
.error--text.text--darken-2 {
  color: #bf0025 !important;
  caret-color: #bf0025 !important;
}
.error.darken-3 {
  background-color: #9f0010 !important;
  border-color: #9f0010 !important;
}
.error--text.text--darken-3 {
  color: #9f0010 !important;
  caret-color: #9f0010 !important;
}
.error.darken-4 {
  background-color: #800000 !important;
  border-color: #800000 !important;
}
.error--text.text--darken-4 {
  color: #800000 !important;
  caret-color: #800000 !important;
}
.info {
  background-color: #2196f3 !important;
  border-color: #2196f3 !important;
}
.info--text {
  color: #2196f3 !important;
  caret-color: #2196f3 !important;
}
.info.lighten-5 {
  background-color: #d4ffff !important;
  border-color: #d4ffff !important;
}
.info--text.text--lighten-5 {
  color: #d4ffff !important;
  caret-color: #d4ffff !important;
}
.info.lighten-4 {
  background-color: #b5ffff !important;
  border-color: #b5ffff !important;
}
.info--text.text--lighten-4 {
  color: #b5ffff !important;
  caret-color: #b5ffff !important;
}
.info.lighten-3 {
  background-color: #95e8ff !important;
  border-color: #95e8ff !important;
}
.info--text.text--lighten-3 {
  color: #95e8ff !important;
  caret-color: #95e8ff !important;
}
.info.lighten-2 {
  background-color: #75ccff !important;
  border-color: #75ccff !important;
}
.info--text.text--lighten-2 {
  color: #75ccff !important;
  caret-color: #75ccff !important;
}
.info.lighten-1 {
  background-color: #51b0ff !important;
  border-color: #51b0ff !important;
}
.info--text.text--lighten-1 {
  color: #51b0ff !important;
  caret-color: #51b0ff !important;
}
.info.darken-1 {
  background-color: #007cd6 !important;
  border-color: #007cd6 !important;
}
.info--text.text--darken-1 {
  color: #007cd6 !important;
  caret-color: #007cd6 !important;
}
.info.darken-2 {
  background-color: #0064ba !important;
  border-color: #0064ba !important;
}
.info--text.text--darken-2 {
  color: #0064ba !important;
  caret-color: #0064ba !important;
}
.info.darken-3 {
  background-color: #004d9f !important;
  border-color: #004d9f !important;
}
.info--text.text--darken-3 {
  color: #004d9f !important;
  caret-color: #004d9f !important;
}
.info.darken-4 {
  background-color: #003784 !important;
  border-color: #003784 !important;
}
.info--text.text--darken-4 {
  color: #003784 !important;
  caret-color: #003784 !important;
}
.success {
  background-color: #4caf50 !important;
  border-color: #4caf50 !important;
}
.success--text {
  color: #4caf50 !important;
  caret-color: #4caf50 !important;
}
.success.lighten-5 {
  background-color: #dcffd6 !important;
  border-color: #dcffd6 !important;
}
.success--text.text--lighten-5 {
  color: #dcffd6 !important;
  caret-color: #dcffd6 !important;
}
.success.lighten-4 {
  background-color: #beffba !important;
  border-color: #beffba !important;
}
.success--text.text--lighten-4 {
  color: #beffba !important;
  caret-color: #beffba !important;
}
.success.lighten-3 {
  background-color: #a2ff9e !important;
  border-color: #a2ff9e !important;
}
.success--text.text--lighten-3 {
  color: #a2ff9e !important;
  caret-color: #a2ff9e !important;
}
.success.lighten-2 {
  background-color: #85e783 !important;
  border-color: #85e783 !important;
}
.success--text.text--lighten-2 {
  color: #85e783 !important;
  caret-color: #85e783 !important;
}
.success.lighten-1 {
  background-color: #69cb69 !important;
  border-color: #69cb69 !important;
}
.success--text.text--lighten-1 {
  color: #69cb69 !important;
  caret-color: #69cb69 !important;
}
.success.darken-1 {
  background-color: #2d9437 !important;
  border-color: #2d9437 !important;
}
.success--text.text--darken-1 {
  color: #2d9437 !important;
  caret-color: #2d9437 !important;
}
.success.darken-2 {
  background-color: #00791e !important;
  border-color: #00791e !important;
}
.success--text.text--darken-2 {
  color: #00791e !important;
  caret-color: #00791e !important;
}
.success.darken-3 {
  background-color: #006000 !important;
  border-color: #006000 !important;
}
.success--text.text--darken-3 {
  color: #006000 !important;
  caret-color: #006000 !important;
}
.success.darken-4 {
  background-color: #004700 !important;
  border-color: #004700 !important;
}
.success--text.text--darken-4 {
  color: #004700 !important;
  caret-color: #004700 !important;
}
.warning {
  background-color: #ffc107 !important;
  border-color: #ffc107 !important;
}
.warning--text {
  color: #ffc107 !important;
  caret-color: #ffc107 !important;
}
.warning.lighten-5 {
  background-color: #ffffae !important;
  border-color: #ffffae !important;
}
.warning--text.text--lighten-5 {
  color: #ffffae !important;
  caret-color: #ffffae !important;
}
.warning.lighten-4 {
  background-color: #ffff91 !important;
  border-color: #ffff91 !important;
}
.warning--text.text--lighten-4 {
  color: #ffff91 !important;
  caret-color: #ffff91 !important;
}
.warning.lighten-3 {
  background-color: #ffff74 !important;
  border-color: #ffff74 !important;
}
.warning--text.text--lighten-3 {
  color: #ffff74 !important;
  caret-color: #ffff74 !important;
}
.warning.lighten-2 {
  background-color: #fff956 !important;
  border-color: #fff956 !important;
}
.warning--text.text--lighten-2 {
  color: #fff956 !important;
  caret-color: #fff956 !important;
}
.warning.lighten-1 {
  background-color: #ffdd37 !important;
  border-color: #ffdd37 !important;
}
.warning--text.text--lighten-1 {
  color: #ffdd37 !important;
  caret-color: #ffdd37 !important;
}
.warning.darken-1 {
  background-color: #e0a600 !important;
  border-color: #e0a600 !important;
}
.warning--text.text--darken-1 {
  color: #e0a600 !important;
  caret-color: #e0a600 !important;
}
.warning.darken-2 {
  background-color: #c18c00 !important;
  border-color: #c18c00 !important;
}
.warning--text.text--darken-2 {
  color: #c18c00 !important;
  caret-color: #c18c00 !important;
}
.warning.darken-3 {
  background-color: #a27300 !important;
  border-color: #a27300 !important;
}
.warning--text.text--darken-3 {
  color: #a27300 !important;
  caret-color: #a27300 !important;
}
.warning.darken-4 {
  background-color: #855a00 !important;
  border-color: #855a00 !important;
}
.warning--text.text--darken-4 {
  color: #855a00 !important;
  caret-color: #855a00 !important;
}
</style>
`;
